Revert "fix: limit current session rolling credits to max 2 visible items"
This reverts commit e2347051d516edcbab0f53243f57c7043c8ff6a8.

--- a/src/app/components/agenda/agenda.component.scss
+++ b/src/app/components/agenda/agenda.component.scss
@@ -279,11 +279,9 @@
 }
 
 .credit-item {
-  min-height: 50cqh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
   padding: 2cqh 0;
 }
 
